--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "node": ">=v18.17.1"
   },
   "type": "module",
-  "packageManager": "pnpm@8.6.12",
+  "packageManager": "pnpm@9.10.0",
   "scripts": {
     "dev": "next dev --port=3001",
     "dev:force": "rm -rf .next && pnpm dev",
@@ -41,7 +41,7 @@
     "front-matter": "^4.0.2",
     "geist": "^1.3.0",
     "lucide-react": "^0.394.0",
-    "next": "14.1.1",
+    "next": "14.2.11",
     "next-mdx-remote": "^4.4.1",
     "posthog-js": "^1.138.1",
     "posthog-node": "^4.0.1",
@@ -54,11 +54,14 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.41.2",
+    "@testing-library/jest-dom": "6.5.0",
+    "@testing-library/react": "16.0.1",
     "@types/node": "20.14.11",
     "@types/react": "18.3.5",
     "@types/react-dom": "18.2.25",
     "@types/rss": "^0.0.32",
     "@typescript-eslint/parser": "^6.14.0",
+    "@vitejs/plugin-react": "4.3.1",
     "autoprefixer": "^10.4.17",
     "eslint": "8.56.0",
     "eslint-config-next": "14.1.0",
