--- a/.github/workflows/test-unit.yml
+++ b/.github/workflows/test-unit.yml
@@ -7,6 +7,11 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: read
+      # required by coverage reporter.
+      pull-requests: write
+
     steps:
       - uses: actions/checkout@v4
       - uses: pnpm/action-setup@v4
