--- a/.github/workflows/test-unit.yml
+++ b/.github/workflows/test-unit.yml
@@ -23,4 +23,6 @@ jobs:
           cache: 'pnpm'
       - run: pnpm i --frozen-lockfile
       - run: pnpm test:unit:ci
-      - uses: davelosert/vitest-coverage-report-action@v2
+      - name: 'Report Coverage'
+        if: always()
+        uses: davelosert/vitest-coverage-report-action@v2
