--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "format:check": "prettier --check .",
     "lint": "next lint",
     "lint:fix": "pnpm lint -- --fix",
+    "precommit": "pnpm spell && pnpm lint && pnpm format",
+    "prepush": "pnpm typecheck && vitest --run",
     "prepare": "husky install",
     "preview": "pnpm build && pnpm start",
     "start": "next start",
+    "spell": "cspell",
     "test:unit": "vitest",
     "test:unit:ci": "vitest --run --coverage",
     "test:e2e:open": "playwright test --headed",
@@ -64,6 +67,7 @@
     "@vitejs/plugin-react": "4.3.1",
     "@vitest/coverage-istanbul": "2.1.1",
     "autoprefixer": "^10.4.20",
+    "cspell": "8.15.1",
     "eslint": "8.57.1",
     "eslint-config-next": "14.1.0",
     "eslint-import-resolver-typescript": "^3.6.3",
