--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,13 @@
         "groups": ["builtin", "external", "parent", "sibling", "index"]
       }
     ],
-    "import/no-named-as-default": 0
+    "import/no-named-as-default": 0,
+    "import/no-unresolved": [
+      "error",
+      {
+        "ignore": ["geist/font/.+"] // @see https://nextjs.org/docs/app/building-your-application/optimizing/fonts
+      }
+    ]
   },
   "settings": {
     "import/resolver": {
