--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "2.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-navigation-menu": "^1.2.1",
     "@radix-ui/react-separator": "^1.1.0",
@@ -46,6 +47,7 @@
     "lucide-react": "^0.456.0",
     "next": "14.2.11",
     "next-mdx-remote": "^4.4.1",
+    "next-themes": "0.4.3",
     "posthog-js": "^1.180.1",
     "posthog-node": "^4.2.1",
     "react": "18.3.1",
