--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "test:unit:ci": "vitest --run --coverage",
     "test:e2e:open": "playwright test --headed",
     "test:e2e:run": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
     "typecheck": "tsc --pretty"
   },
   "dependencies": {
