--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@playwright/test": "^1.48.2",
     "@testing-library/jest-dom": "6.5.0",
     "@testing-library/react": "16.0.1",
+    "@testing-library/user-event": "14.5.2",
     "@types/node": "22.7.5",
     "@types/react": "18.3.12",
     "@types/react-dom": "18.2.25",
