--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "test:unit:ci": "vitest --run --coverage",
     "test:e2e:open": "playwright test --headed",
     "test:e2e:run": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
     "typecheck": "tsc --pretty"
   },
   "dependencies": {
@@ -33,6 +34,7 @@
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "2.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-navigation-menu": "^1.2.1",
     "@radix-ui/react-separator": "^1.1.0",
@@ -46,6 +48,7 @@
     "lucide-react": "^0.456.0",
     "next": "14.2.11",
     "next-mdx-remote": "^4.4.1",
+    "next-themes": "0.3.0",
     "posthog-js": "^1.180.1",
     "posthog-node": "^4.2.1",
     "react": "18.3.1",
@@ -59,6 +62,7 @@
     "@playwright/test": "^1.48.2",
     "@testing-library/jest-dom": "6.5.0",
     "@testing-library/react": "16.0.1",
+    "@testing-library/user-event": "14.5.2",
     "@types/node": "22.7.5",
     "@types/react": "18.3.12",
     "@types/react-dom": "18.2.25",
