--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
   },
   "type": "module",
   "packageManager": "pnpm@9.10.0",
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/git-cz"
+    }
+  },
   "scripts": {
     "dev": "next dev --port=3001",
     "dev:force": "rm -rf .next && pnpm dev",
@@ -59,6 +64,8 @@
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "19.6.0",
+    "@commitlint/config-conventional": "19.6.0",
     "@playwright/test": "^1.48.2",
     "@testing-library/jest-dom": "6.5.0",
     "@testing-library/react": "16.0.1",
@@ -71,11 +78,13 @@
     "@vitejs/plugin-react": "4.3.3",
     "@vitest/coverage-istanbul": "2.1.3",
     "autoprefixer": "^10.4.20",
+    "commitlint": "19.6.0",
     "cspell": "8.15.1",
     "eslint": "8.57.1",
     "eslint-config-next": "14.1.0",
     "eslint-import-resolver-typescript": "^3.6.3",
     "eslint-plugin-import": "^2.31.0",
+    "git-cz": "4.9.0",
     "happy-dom": "^15.10.2",
     "husky": "^8.0.3",
     "postcss": "^8.4.38",
